--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 .z-index{
     z-index: -1;
 }
+
+.circle{
+    position: absolute;
+    bottom: -3.125rem;
+    border-radius: 100%;
+    height: 6.25rem;
+    width: 6.25rem;
+    background-color: black;
+    margin: auto;
+}
+
+html,
+body {
+  max-width: 100%;
+  max-height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
